--- a/AnimalRefugeFinal/wwwroot/css/site.css
+++ b/AnimalRefugeFinal/wwwroot/css/site.css
@@ -1,22 +1,83 @@
-html {
-  font-size: 14px;
+/*Fonts */
+@font-face{
+    font-family: 'Fire Cracker';
+    src: url('../fonts/Firecracker Regular.ttf') format('truetype');
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+@font-face {
+    font-family: 'Lovise';
+    src: url('../fonts/Lovise.otf') format('opentype');
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+/* Reset some default styles for better consistency */
+body, h1, h2, p, ul, li {
+    margin: 0;
+    padding: 0;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+.banner {
+    background-image: url(images/petBanner.jpg);
+    text-align: center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: right center;
+    height: 500px;
+    color: black !important;
+    text-shadow: 0 0 10px white; /* Add the text-shadow property */
 }
+
 
 body {
-  margin-bottom: 60px;
+    font-family: 'Fire Cracker', sans-serif;
+    background-color: #9d95b0;
+}
+
+p {
+    font-family: 'Fire Cracker', sans-serif;
+    color: #171718;
+}
+
+h1, h2, h3 {
+    font-family: Lovise, sans-serif;
+    color: #29221a;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+}
+
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+    nav a {
+        color: #fff;
+        text-decoration: none;
+        margin: 0 15px;
+    }
+
+main {
+    margin-top: 20px;
+}
+
+section {
+    margin-bottom: 20px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
 }
