--- a/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
+++ b/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <div class="banner">
+            <h1>Animal Rescue Leauge</h1>
+        </div>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AnimalRefugeFinal</a>
@@ -21,23 +24,28 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Login</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+
+    </div>
+
+    <div class="wrapper">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+
+        <footer>
+            <div class="container">
+                &copy; 2023 AnimalRefugeFinal. All Rights Reserved.
+            </div>
+        </footer>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - AnimalRefugeFinal - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
