--- a/AnimalRefugeFinal/wwwroot/css/site.css
+++ b/AnimalRefugeFinal/wwwroot/css/site.css
@@ -1,5 +1,5 @@
-/*Fonts */
-@font-face{
+/* Fonts */
+@font-face {
     font-family: 'Fire Cracker';
     src: url('../fonts/Firecracker Regular.ttf') format('truetype');
 }
@@ -16,16 +16,15 @@ body, h1, h2, p, ul, li {
 }
 
 .banner {
-    background-image: url(images/petBanner.jpg);
-    text-align: center;
-    background-attachment: fixed;
+    background-image: url(../images/petBanner.jpg);
     background-size: cover;
-    background-position: right center;
-    height: 500px;
-    color: black !important;
-    text-shadow: 0 0 10px white; /* Add the text-shadow property */
+    height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-shadow: 2px 2px 5px white; /* Set the white shadow */
 }
-
 
 body {
     font-family: 'Fire Cracker', sans-serif;
@@ -35,11 +34,16 @@ body {
 p {
     font-family: 'Fire Cracker', sans-serif;
     color: #171718;
+    font-size: 16px;
 }
 
 h1, h2, h3 {
     font-family: Lovise, sans-serif;
     color: #29221a;
+}
+
+h1 {
+    font-size: 100px !important;
 }
 
 .container {
@@ -53,7 +57,6 @@ header {
     color: #fff;
     padding: 10px 0;
 }
-
 
 nav {
     display: flex;
@@ -73,6 +76,69 @@ main {
 
 section {
     margin-bottom: 20px;
+}
+
+.login-container {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+    .login-container h2 {
+        font-family: 'Lovise', sans-serif;
+        color: #29221a;
+        text-align: center;
+        font-size: 24px;
+    }
+
+form {
+    margin-top: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-family: 'Lovise', sans-serif;
+    color: #29221a;
+    font-size: 16px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+button {
+    background-color: #333;
+    color: #fff;
+    padding: 15px; /* Increased padding for a larger button */
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block; /* Center the button */
+    margin: 0 auto; /* Center the button */
+    font-size: 20px; /* Increased font size for the button */
+}
+
+.sizebutton {
+    font-size: 20px;
+}
+
+    button:hover {
+        background-color: #555;
+    }
+
+/* Optional: Add some spacing between form elements */
+div {
+    margin-bottom: 15px;
 }
 
 footer {
