--- a/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
+++ b/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">View Profile</a>
                         </li>
                     </ul>
                 </div>
