--- a/AnimalRefugeFinal/wwwroot/css/site.css
+++ b/AnimalRefugeFinal/wwwroot/css/site.css
@@ -141,6 +141,29 @@ div {
     margin-bottom: 15px;
 }
 
+.user-profile {
+    max-width: 400px; /* Adjust as needed */
+    margin: 0 auto;
+}
+
+.profile-field {
+    margin-bottom: 10px;
+}
+
+.field-label {
+    font-weight: bold;
+}
+
+.edit-button {
+    margin-top: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+
 footer {
     background-color: #333;
     color: #fff;
