--- a/AnimalRefugeFinal/Views/AdoptionApplication/AdoptionApplication.cshtml
+++ b/AnimalRefugeFinal/Views/AdoptionApplication/AdoptionApplication.cshtml
@@ -41,7 +41,7 @@
         }
 </style>
 
-<h2>@ViewData["Title"]</h2>
+<h2 style="text-align: center;">@ViewData["Title"]</h2>
 
 <form asp-action="Apply" method="post">
 
@@ -75,6 +75,16 @@
     </div>
 
     <div>
+        <label asp-for="WantsToAdoptDog">Do you want to adopt a dog?</label>
+        <input asp-for="WantsToAdoptDog" type="checkbox" />
+    </div>
+
+    <div>
+        <label asp-for="HasFencedInYard">Do you have a fenced-in yard?</label>
+        <input asp-for="HasFencedInYard" type="checkbox" />
+    </div>
+
+    <div>
         <label asp-for="NumberOfPets">Number of Pets You are looking to Adopt:</label>
         <input asp-for="NumberOfPets" type="number" min="1" id="numberOfPets" />
     </div>
@@ -93,10 +103,45 @@
         </div>
     }
 
+    
+        <div>
+            <label asp-for="CurrentPetNumber">Current Pets you have at Home:</label>
+            <input asp-for="CurrentPetNumber" type="number" id="CurrentPetNumber" />
+        </div>
+    @for (int i = 1; i <= Model.CurrentPetNumber; i++)
+    {
+        <div id="CurrentPetContainer">
+            <label asp-for="CurrentPet[i].CurrentPetName"> Current Pet Name @i:</label>
+            <input asp-for="CurrentPet[i].CurrentPetName"/>
+            <label asp-for="CurrentPet[i].CurrentPetAge">Current Pet Age @i:</label>
+            <input asp-for="CurrentPet[i].CurrentPetAge" />
+            <label asp-for="CurrentPet[i].CurrentPetBreed">Current Pet Breed @i:</label>
+            <input asp-for="CurrentPet[i].CurrentPetBreed" />
+            <label asp-for="CurrentPet[i].VetName">Current Vet @i:</label>
+            <input asp-for="CurrentPet[i].VetName" />
+            <label asp-for="CurrentPet[i].VetPhoneNumber">Current Vet Phone Number @i:</label>
+            <input asp-for="CurrentPet[i].VetPhoneNumber" />
+
+        </div>
+    }
     <div>
-        <label asp-for="CurrentPets">Current Pets:</label>
-        <input asp-for="CurrentPets" />
+        <label asp-for="CurrentHumansNumber">Current number of Family members in your House:</label>
+        <input asp-for="CurrentHumansNumber" type="number" id="CurrentHumansNumber" />
     </div>
+    @for (int i = 1; i < Model.CurrentHumansNumber; i++) 
+    {
+        <div class="currentHumanContainer">
+            <label asp-for="CurrentHumans[i].FirstName"> Family member First Name @i:</label>
+            <input asp-for="CurrentHumans[i].FirstName" />
+            <label asp-for="CurrentHumans[i].LastName"> Family member Last Name @i:</label>
+            <input asp-for="CurrentHumans[i].LastName" />
+            <label asp-for="CurrentHumans[i].Age"> Family member Age @i:</label>
+            <input asp-for="CurrentHumans[i].Age" />
+        </div>
+    }
+
+
+
 
     <div>
         <button type="submit">Submit Application</button>
@@ -142,4 +187,117 @@
             }
         });
     </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Script for updating fields related to 'CurrentPet'
+            var currentPetNumberInput = document.getElementById("CurrentPetNumber");
+            var currentPetContainer = document.getElementById("CurrentPetContainer");
+
+            currentPetNumberInput.addEventListener("change", function () {
+                updateCurrentPetFields();
+            });
+
+            function updateCurrentPetFields() {
+                var currentPetNumber = parseInt(currentPetNumberInput.value, 10);
+
+                // Clear existing current pet fields
+                currentPetContainer.innerHTML = "";
+
+                // Add new current pet fields based on the number entered
+                for (var i = 0; i < currentPetNumber; i++) {
+                    var currentPetNameLabel = document.createElement("label");
+                    currentPetNameLabel.innerText = "Current Pet Name " + i + ":";
+                    currentPetContainer.appendChild(currentPetNameLabel);
+
+                    var currentPetNameInput = document.createElement("input");
+                    currentPetNameInput.setAttribute("name", "CurrentPet[" + i + "].CurrentPetName");
+                    currentPetContainer.appendChild(currentPetNameInput);
+
+                    var currentPetAgeLabel = document.createElement("label");
+                    currentPetAgeLabel.innerText = "Current Pet Age " + i + ":";
+                    currentPetContainer.appendChild(currentPetAgeLabel);
+
+                    var currentPetAgeInput = document.createElement("input");
+                    currentPetAgeInput.setAttribute("name", "CurrentPet[" + i + "].CurrentPetAge");
+                    currentPetContainer.appendChild(currentPetAgeInput);
+
+                    var currentPetBreedLabel = document.createElement("label");
+                    currentPetBreedLabel.innerText = "Current Pet Breed " + i + ":";
+                    currentPetContainer.appendChild(currentPetBreedLabel);
+
+                    var currentPetBreedInput = document.createElement("input");
+                    currentPetBreedInput.setAttribute("name", "CurrentPet[" + i + "].CurrentPetBreed");
+                    currentPetContainer.appendChild(currentPetBreedInput);
+
+                    var vetNameLabel = document.createElement("label");
+                    vetNameLabel.innerText = "Current Vet " + i + ":";
+                    currentPetContainer.appendChild(vetNameLabel);
+
+                    var vetNameInput = document.createElement("input");
+                    vetNameInput.setAttribute("name", "CurrentPet[" + i + "].VetName");
+                    currentPetContainer.appendChild(vetNameInput);
+
+                    var vetPhoneNumberLabel = document.createElement("label");
+                    vetPhoneNumberLabel.innerText = "Current Vet Phone Number " + i + ":";
+                    currentPetContainer.appendChild(vetPhoneNumberLabel);
+
+                    var vetPhoneNumberInput = document.createElement("input");
+                    vetPhoneNumberInput.setAttribute("name", "CurrentPet[" + i + "].VetPhoneNumber");
+                    currentPetContainer.appendChild(vetPhoneNumberInput);
+
+                    var div = document.createElement("div");
+                    currentPetContainer.appendChild(div);
+                }
+            }
+        });
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Script for updating fields related to 'CurrentHumans'
+            var currentHumansNumberInput = document.getElementById("CurrentHumansNumber");
+            var currentHumansContainer = document.getElementById("currentHumansContainer");
+
+            currentHumansNumberInput.addEventListener("change", function () {
+                updateCurrentHumansFields();
+            });
+
+            function updateCurrentHumansFields() {
+                var currentHumansNumber = parseInt(currentHumansNumberInput.value, 10);
+
+                // Clear existing current humans fields
+                currentHumansContainer.innerHTML = "";
+
+                // Add new current humans fields based on the number entered
+                for (var i = 0; i < currentHumansNumber; i++) {
+                    var firstNameLabel = document.createElement("label");
+                    firstNameLabel.innerText = "Family member First Name " + i + ":";
+                    currentHumansContainer.appendChild(firstNameLabel);
+
+                    var firstNameInput = document.createElement("input");
+                    firstNameInput.setAttribute("name", "CurrentHumans[" + i + "].FirstName");
+                    currentHumansContainer.appendChild(firstNameInput);
+
+                    var lastNameLabel = document.createElement("label");
+                    lastNameLabel.innerText = "Family member Last Name " + i + ":";
+                    currentHumansContainer.appendChild(lastNameLabel);
+
+                    var lastNameInput = document.createElement("input");
+                    lastNameInput.setAttribute("name", "CurrentHumans[" + i + "].LastName");
+                    currentHumansContainer.appendChild(lastNameInput);
+
+                    var ageLabel = document.createElement("label");
+                    ageLabel.innerText = "Family member Age " + i + ":";
+                    currentHumansContainer.appendChild(ageLabel);
+
+                    var ageInput = document.createElement("input");
+                    ageInput.setAttribute("name", "CurrentHumans[" + i + "].Age");
+                    currentHumansContainer.appendChild(ageInput);
+
+                    var div = document.createElement("div");
+                    currentHumansContainer.appendChild(div);
+                }
+            }
+        });
+    </script>
+
 }
