--- a/AnimalRefugeFinal/Views/Home/Index.cshtml
+++ b/AnimalRefugeFinal/Views/Home/Index.cshtml
@@ -1,8 +1,109 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
+<style>
+	body {
+		box-sizing: border-box;
+	}
+
+	.mainColumns {
+		display: flex;
+	}
+
+	main div.mainColumns .leftColumnSection, main div.mainColumns .rightColumnSection {
+		width: 25%;
+	}
+
+	main div.mainColumns .centerColumnSection {
+		width: 50%;
+	}
+
+	.leftColumnSection {
+		margin-top: 5px;
+		margin-bottom: 5px;
+		margin-right: 10px;
+		margin-left: 10px;
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+
+	.centerColumnSection {
+		margin-top: 5px;
+		margin-bottom: 5px;
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+
+	.rightColumnSection {
+		margin-top: 5px;
+		margin-bottom: 5px;
+		margin-right: 10px;
+		margin-left: 10px;
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-top: 10px;
+	}
+
+	h3 {
+		text-shadow: 2px 2px 5px whitesmoke;
+		border-top: solid black;
+		border-bottom: solid black;
+		text-align: center;
+		font-size: x-large;
+	}
+
+	.boldP {
+		font-weight: bold;
+		text-decoration-line: underline;
+	}
+
+	.indentP {
+		text-indent: 30px;
+	}
+</style>
+
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+	<h1 class="display-4">Welcome</h1>
+</div>
+
+<div class="mainColumns">
+	<section class="leftColumnSection">
+		<div>
+			Opening your heart to a shelter pet is the best decision you'll ever make! We truly want to make a lasting impact on every animal that comes through our doors.
+			We always strive to do our best to help each animal find a loving home that will be the right fit for them
+		</div>
+
+		<div>
+			Why should you adopt a pet? All animals at our shelter are in need of a second chance.
+			They have been lost, given up or abandoned. They are all unwanted and helpless. You are giving them a new life in a loving home
+		</div>
+
+		<div>
+			When your friends ask where you got your amazing pet, you can tell them "at the shelter." Your adoption may encourage others to do the same.
+		</div>
+	</section>
+
+	<section class="centerColumnSection">
+		<h3>Upcoming Events:</h3>
+
+		<p class="boldP">Saturday, December 30th:</p>
+		<p class="indentP">Our annual Adopt-a-Rama Open House from 10:00 a.m. to 4:00 p.m.</p>
+
+		<p class="boldP">Thursday, January 4th:</p>
+		<p class="indentP">Volunteer training from 6:30 p.m. to 8:00 p.m.</p>
+
+		<p class="boldP">Tuesday, January 9th:</p>
+		<p class="indentP">Obedience 101 class from 6:30 p.m. to 7:30 p.m. You must be enrolled to attend.</p>
+	</section>
+
+	<section class="rightColumnSection">
+		<div>
+			<strong>Cat of the Week:</strong>
+		</div>
+		<div>
+			<strong>Dog of the Week:</strong>
+		</div>
+	</section>
 </div>
