--- a/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
+++ b/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Login</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">View Profile</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="AdoptionApplication" asp-action="AdoptionApplication">Adoption Application</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About Us</a>
                         </li>
                     </ul>
                 </div>
