updated model binding, input validation
updated model binding, input validation

--- a/AnimalRefugeFinal/Views/AdoptionApplication/AdoptionApplication.cshtml
+++ b/AnimalRefugeFinal/Views/AdoptionApplication/AdoptionApplication.cshtml
@@ -75,6 +75,11 @@
     </div>
 
     <div>
+        <label asp-for="Reason">Reson for wanting to adopt:</label>
+        <textarea asp-for="Reason"></textarea>
+    </div>
+
+    <div>
         <label asp-for="WantsToAdoptDog">Do you want to adopt a dog?</label>
         <input asp-for="WantsToAdoptDog" type="checkbox" />
     </div>
