--- a/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
+++ b/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
@@ -24,9 +24,9 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">View Profile</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="AdoptionApplication" asp-action="AdoptionApplication">Adoption Application</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Adoption" asp-action="Apply">Adoption Application</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About Us</a>
                         </li>
                     </ul>
