Adding my Views
Adding my views

--- a/AnimalRefugeFinal/Views/Home/About.cshtml
+++ b/AnimalRefugeFinal/Views/Home/About.cshtml
@@ -2,67 +2,8 @@
 	ViewData["Title"] = "About Us";
 }
 
-<style>
-	.hoursP {
-		background-color: black;
-		color: whitesmoke;
-		font-size: x-large;
-		padding-left: 10px;
-		text-align: center;
-	}
-
-	.weekHoursP {
-		font-size: large;
-		padding-left: 60px;
-	}
-
-	strong {
-		color: black;
-		font-size: larger;
-	}
-
-	body {
-		box-sizing: border-box;
-	}
-
-	.mainColumns {
-		display: flex;
-	}
-
-	main div.mainColumns .leftColumnSection, main div.mainColumns .rightColumnSection {
-		width: 25%;
-	}
-
-	main div.mainColumns .centerColumnSection {
-		width: 50%;
-	}
-
-	.leftColumnSection {
-		margin-top: 5px;
-		margin-bottom: 5px;
-		margin-right: 10px;
-		margin-left: 10px;
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.centerColumnSection {
-		margin-top: 5px;
-		margin-bottom: 5px;
-		padding-left: 50px;
-		padding-right: 50px;
-	}
-
-	.rightColumnSection {
-		margin-top: 5px;
-		margin-bottom: 5px;
-		margin-right: 10px;
-		margin-left: 10px;
-		padding-left: 10px;
-		padding-right: 10px;
-		padding-top: 10px;
-	}
-</style>
+<link rel="stylesheet" type="text/css" href="~/css/site.css">
+<link rel="stylesheet" type="text/css" href="~/css/about.css">
 
 <div class="text-center">
 	<h1 class="display-4">About Us</h1>
@@ -91,7 +32,8 @@
 			Sunday 12:00 noon to 5:00 pm <br>
 			Monday - Thursday 10:00 am to 7:00 pm <br>
 			Friday 10:00 am to 4:00 pm <br>
-			Saturday 9:00 am to 5:00 pm
+			Saturday 9:00 am to 5:00 pm<br>
+			<img src="~/images/savepups.png" alt="save pups" width="200" height="200" />
 		</p>
 
 	</section>
