--- a/AnimalRefugeFinal/Views/Home/Index.cshtml
+++ b/AnimalRefugeFinal/Views/Home/Index.cshtml
@@ -1,68 +1,8 @@
 ﻿@{
 	ViewData["Title"] = "Home Page";
 }
-
-<style>
-	body {
-		box-sizing: border-box;
-	}
-
-	.mainColumns {
-		display: flex;
-	}
-
-	main div.mainColumns .leftColumnSection, main div.mainColumns .rightColumnSection {
-		width: 25%;
-	}
-
-	main div.mainColumns .centerColumnSection {
-		width: 50%;
-	}
-
-	.leftColumnSection {
-		margin-top: 5px;
-		margin-bottom: 5px;
-		margin-right: 10px;
-		margin-left: 10px;
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.centerColumnSection {
-		margin-top: 5px;
-		margin-bottom: 5px;
-		padding-left: 50px;
-		padding-right: 50px;
-	}
-
-	.rightColumnSection {
-		margin-top: 5px;
-		margin-bottom: 5px;
-		margin-right: 10px;
-		margin-left: 10px;
-		padding-left: 10px;
-		padding-right: 10px;
-		padding-top: 10px;
-	}
-
-	h3 {
-		text-shadow: 2px 2px 5px whitesmoke;
-		border-top: solid black;
-		border-bottom: solid black;
-		text-align: center;
-		font-size: x-large;
-	}
-
-	.boldP {
-		font-weight: bold;
-		text-decoration-line: underline;
-	}
-
-	.indentP {
-		text-indent: 30px;
-	}
-</style>
-
+<link rel="stylesheet" type="text/css" href="~/css/site.css">
+<link rel="stylesheet" type="text/css" href="~/css/index.css">
 
 <div class="text-center">
 	<h1 class="display-4">Welcome</h1>
@@ -100,10 +40,12 @@
 
 	<section class="rightColumnSection">
 		<div>
-			<strong>Cat of the Week:</strong>
+			<strong>Cat of the Week:</strong> Destiny <br />
+			<img src="~/images/Destiny.png" alt="cat of the week" width="200" height="200" />
 		</div>
 		<div>
-			<strong>Dog of the Week:</strong>
+			<strong>Dog of the Week:</strong> Chili <br />
+			<img src="~/images/chili.png" alt="dog of the week" width="200" height="200" />
 		</div>
 	</section>
 </div>
