--- a/AnimalRefugeFinal/Views/User/TrackApplications.cshtml
+++ b/AnimalRefugeFinal/Views/User/TrackApplications.cshtml
@@ -25,8 +25,8 @@
                 <tr>
                     <td>@application.Id</td>
                     <td>@application.User.UserName</td>
-                    <td>@application.Pets.Name</td>
-                    <td>@application.Status.StatusName</td>
+                    <td>@application.Pet.Name</td>
+                    <td>@application.Status.Name</td>
                     <td>@application.ApplicationDate</td>
                     <!-- Add other columns as needed -->
                 </tr>
