--- a/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
+++ b/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">View Profile</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Adoption" asp-action="Apply">Adoption Application</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About Us</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Details">Details On Pets</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pet" asp-action="ViewList">List of Pets</a>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
                         </li>
                     </ul>
@@ -36,8 +36,6 @@
             </div>
         </nav>
     </header>
-
-    </div>
 
     <div class="wrapper">
         <main role="main" class="pb-3">
