fixed details link

--- a/AnimalRefugeFinal/Views/Pet/Details.cshtml
+++ b/AnimalRefugeFinal/Views/Pet/Details.cshtml
@@ -13,4 +13,4 @@
 
 <!-- Add more details if needed -->
 
-<a asp-action="Index">Back to List</a>
+<a asp-area="" asp-controller="Pet" asp-action="ViewList">List of Pets</a>
