--- a/AnimalRefugeFinal/wwwroot/css/site.css
+++ b/AnimalRefugeFinal/wwwroot/css/site.css
@@ -64,7 +64,7 @@ header {
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -72,6 +72,7 @@ nav {
         color: #fff;
         text-decoration: none;
         margin: 0 15px;
+        
     }
 
 main {
