View Profile Works

--- a/AnimalRefugeFinal/Views/Home/Index.cshtml
+++ b/AnimalRefugeFinal/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
 		</div>
 		<div>
 			<strong>Dog of the Week:</strong> Chili <br />
-			<img src="~/images/chili.png" alt="dog of the week" width="200" height="200" />
+			<img src="~/images/Chili.png" alt="dog of the week" width="200" height="200" />
 		</div>
 	</section>
 </div>
