got rid of adoption form and made it a webpage instead

--- a/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
+++ b/AnimalRefugeFinal/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">View Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Adoption" asp-action="Apply">Adoption Application</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Adoption">Adoption Information</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About Us</a>
